# aziz

./: .vsconfig  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: aziz.cpp  precomp.h
